1.6.2
* Qdb: Memory bindings for Windows and Linux are being used automatically

1.6.1 - 2016-04-06
* Client: network queue for txs processing increased to 2000
* Client: WebUI/Transactions - The fees chart shows age of a transaction (on hovering)
* Downloader: excessive memory consumption shall no longer be an issue
* Client: some changes in how the core's consensus lib is called, as it had been giving false positives

1.6.0 - 2016-03-30
* Client: added option to use bitcoin's consensus lib for ensuring that scripts are processed properly
* Qdb: Writing the entire database content (e.g. during defrag) is much faster now
* Client: peer's send buffer made as a static circular buffer (with max size of 4MB)
* Client: improved bandwidth statistics
* New tool "bdb", for managing and deframenting the blocks database
* Lib: check each new block for MAX_BLOCK_SIGOPS
* Lib: check for merkle tree malleability (CVE-2012-2459) when accepting block
* Client: RPC API for mining (supports "getblocktemplate", "validateaddress" and "submitblock")
* Lib: fixed a critical issue of accepting a block hash which does not match the bits field from teh header
* Lib: fixed issue with recalculating difficulty each 2016 blocks that was appearing on testnet3
* Lib: script.VerifyTxScript() counts number of sigops when called with COUNT_SIGOPS flag
* Updated snappy package to the latest version from https://github.com/golang/snappy

1.5.0 - 2016-03-16
* Client: Fixed maximul allowed message size for "getheaders" that was causing issues on testnet
* Client: Do not allow into the mempool transactions spending inmature coinbase inputs
* WebUI: Allows to specify the sequence number for Replace By Fee feature
* Wallet: By default tx's sequence numbers are same as currrent unix time. Can be overwritten with "-seq <val>"
* Client: Additional mining statistics
* Client: support for Web Wallets (volatile wallets provided by the browser, not kept on the server)