@@ -1,11 +1,7 @@
-chain.commitTxs():
-* Check transactions (not only inputs) using parallel tasks
-
 Downloader:
 * Running out of memory when only downloading the blocks
 
 Client:
-* HandleNetTx() - check each of the inputs in a parallel task
 * Make volatile wallets really volatile (not stored in server's memory)
 * Implement RBF in the mempool - https://bitcointalk.org/index.php?topic=1331275.msg13921601#msg13921601
 * Check how the "MoveToBlock cannot continue" solution works in reality
